crates/sdk-derive/tests/router/function_id/06-invalid-hex.stderr
error: Invalid function ID format. Expected either a Solidity function signature (e.g., 'transfer(address,uint256)') or a 4-byte hex string (e.g., '0x12345678')
 --> tests/06-invalid-hex.rs:3:15
  |
3 | #[function_id("0x1234")] // Too short
  |               ^^^^^^^^
